degree one with stack